--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
   <link rel="stylesheet" href="libraries/frameworks/revealjs/css/reveal.min.css">
-  <link rel="stylesheet" href="libraries/frameworks/revealjs/css/theme/Moon.css" id="theme">
+  <link rel="stylesheet" href="libraries/frameworks/revealjs/css/theme/default.css" id="theme">
   <link rel="stylesheet" href="libraries/highlighters/highlight.js/css/default.css" id="theme">
   <!--[if lt IE 9]>
   <script src="lib/js/html5shiv.js"></script>
@@ -26,7 +26,8 @@
         background-color: #818286;
         color: white;
     }
-
+    
+    
 
     body .imgBackground{
         height:100%;
@@ -204,7 +205,7 @@
     progress: true,
     history: true,
     center: true,
-    theme: Reveal.getQueryHash().theme || 'Moon', 
+    theme: Reveal.getQueryHash().theme || 'default', 
     transition: Reveal.getQueryHash().transition || 'Convex', 
     dependencies: [
     // Cross-browser shim that fully implements classList -
