--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -52,7 +52,7 @@
 
 <p>Dimitris Nikoglou - Dimitris Psaradellis</p>
 
-<p><a href="mailto:dimitrisnk@infilab.io">Contanct Me</a> <font size="6px"> or </font> <a href="mailto:dimitrisnps@infilab.io">Contanct Me</a></p>
+<p><a href="mailto:dimitrisnk@infilab.io">Contact Me</a> <font size="6px"> or </font> <a href="mailto:dimitrisnps@infilab.io">Contact Me</a></p>
 
 <p>Where to find us, besides Zurich <a href="http://infilab.io">@infiLab.io</a></p>
 
