--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -44,9 +44,11 @@
 <p><br><br>
 <br><br></p>
 
-<h3><font size="12px">An intro to our company, where it is...</font></h3>
-
+        
 <h2>all about Data <font size="6px">created by </font><font color="#BE202F">infiLab</font></h2>
+<h3><font size="12px">An intro to our company...</font></h3>
+
+
 
 <p><br><br></p>
 
@@ -70,7 +72,7 @@
 <br>
 <br></p>
 
-<p><font size="6px">From September 2016 we decided to focus on shaping  </font><br><font size="7px" color="#BE202F"><strong>company biographies</strong></font> <font size="6px">derived from </font><font size="7px" color="#BE202F"><strong>business data</strong></font>.
+<p><font size="6px">From September 2016 we decided to focus on </font><br><font size="7px" color="#BE202F"><strong>shaping company biographies</strong></font> <font size="6px">derived from </font><font size="7px" color="#BE202F"><strong>business data</strong></font>.
 <br>
 <br>
 <br></p>
@@ -136,7 +138,7 @@
 
 <ul>
   <li> Recommendation Engines</li>
-  <li> Synthetic Control Experimantation</li>
+  <li> Synthetic Control Experimentation</li>
   <li> Supervised - Unsupervised Learning</li>
   <li> Text Mining</li>
 </ul>
@@ -184,7 +186,7 @@
    </section>
 </section>
 <section class='' data-state='' id='slide-11'>
-  <h1>Thank you!</h1>
+  <h2>Thank you</h2>
   <h2>Questions? <a href="mailto:info@infilab.io">@</a></h2>
 
 <p><a href="http://infilab.io">infiLab</a> or info(at)infilab.io</p>
