--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -175,7 +175,7 @@
 </section>
 <section>
    <section class='' data-state=''>
-    <h3>Some of our stuff</h3>
+    <h3>A sample of or work</h3>
     <p><a href="http://rpubs.com/infilab/football">On Data Journalism (in Greek)</a>
 <br>
 <a href="http://zurich-r-user-group.github.io/slides.html">Zurich R meetup, on CrossTalk</a></p>
@@ -187,11 +187,11 @@
 </section>
 <section class='' data-state='' id='slide-11'>
   <h2>Thank you</h2>
-  <h2>Questions? <a href="mailto:info@infilab.io">@</a></h2>
+  <h3>Questions? <a href="mailto:info@infilab.io">@</a></h3>
 
 <p><a href="http://infilab.io">infiLab</a> or info(at)infilab.io</p>
 
-<p><a href="https://twitter.com/infiLab">@infiLab</a></p>
+<p><a href="https://twitter.com/infiLab"><img src= "https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/twitter-128.png" width=50 height=50> &nbsp;&nbsp;@infiLab</a></p>
 
 </section>
     </div>
