--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -191,7 +191,7 @@
 
 <p><a href="http://infilab.io">infiLab</a> or info(at)infilab.io</p>
 
-<p><a href="https://twitter.com/infiLab"><img src= "https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/twitter-128.png" width=50 height=50> &nbsp;&nbsp;@infiLab</a></p>
+<p><a href="https://twitter.com/infiLab"><img src= "https://cdn0.iconfinder.com/data/icons/social-flat-rounded-rects/512/twitter-128.png" width=50 height=50 align="left"> &nbsp;&nbsp;@infiLab</a></p>
 
 </section>
     </div>
