--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -191,7 +191,7 @@
 
 <p><a href="http://infilab.io">infiLab</a> or info(at)infilab.io</p>
 
-<p>Twitter:<a href="https://twitter.com/infiLab"> &nbsp;&nbsp;@infiLab</a></p>
+<p>Twitter:<a href="https://twitter.com/infiLab"> &nbsp;@infiLab</a></p>
 
 </section>
     </div>
