--- a/presentation2/index.html
+++ b/presentation2/index.html
@@ -72,7 +72,7 @@
 <br>
 <br></p>
 
-<p><font size="6px">From September 2016 we decided to focus on </font><br><font size="7px" color="#BE202F"><strong>shaping company biographies</strong></font> <font size="6px">derived from </font><font size="7px" color="#BE202F"><strong>business data</strong></font>
+<p><font size="6px">From September 2016 we decided to focus on </font><br><font size="7px" color="#BE202F"><strong>shaping company biographies</strong></font> <font size="6px">derived from </font><font size="7px" color="#BE202F"><strong> data</strong></font>
 <br>
 <br>
 <br></p>
