updated background image

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -28,7 +28,7 @@
     }
     
     body {
-        background-image: url("http://i.imgsafe.org/642ba63594.jpg");
+        background-image: url("http://i.imgsafe.org/8e9cbb672c.jpg");
     }
 
 </style>
@@ -47,7 +47,6 @@
 <p><a href="mailto:dimitrisnk@infilab.io">Contact Me</a> <font size="6px"> or </font> <a href="mailto:dimitrisnps@infilab.io">Contact Me</a></p>
 
 <p>Where to find us, besides Zurich <a href="http://infilab.io">@infiLab.io</a>
-<br>
 <a href="#" class="navigate-right"><img src='http://www.clipartbest.com/cliparts/dc6/e7a/dc6e7arRi.gif' width=50 height=50 align='right' style="image-orientation: 90deg; border: 0;"></a></p>
 
 </section>
@@ -132,7 +131,7 @@
 
 <p><br></p>
 
-<p><font size="5px">for more go  </font><a href="#" class="navigate-down"><img src='http://www.clipartbest.com/cliparts/9iR/6jG/9iR6jGXie.gif' width=50 height=50 align='right' style="border: 0;"></a></p>
+<p><font size="5px"> </font><a href="#" class="navigate-down"><img src='http://www.clipartbest.com/cliparts/9iR/6jG/9iR6jGXie.gif' width=50 height=50 align='right' style="border: 0;"></a></p>
 
 </section>
 <section class='' data-state='' id='slide-8'>
@@ -151,7 +150,7 @@
 <p></font>
 <br></p>
 
-<p><font size="5px">for more go  </font><a href="#" class="navigate-down"><img src='http://www.clipartbest.com/cliparts/9iR/6jG/9iR6jGXie.gif' width=50 height=50 align='right' style="border: 0;"></a></p>
+<p><font size="5px"></font><a href="#" class="navigate-down"><img src='http://www.clipartbest.com/cliparts/9iR/6jG/9iR6jGXie.gif' width=50 height=50 align='right' style="border: 0;"></a></p>
 
 </section>
 <section class='' data-state='' id='slide-9'>
