Responsive background image

--- a/presentation/index.html
+++ b/presentation/index.html
@@ -29,6 +29,9 @@
     
     body {
         background-image: url("http://i.imgsafe.org/90b08debe2.jpg");
+        background-repeat:no-repeat;
+        background-size:contain;
+        background-position:center;
     }
 
 </style>
