--- a/presentation/index.html
+++ b/presentation/index.html
@@ -168,7 +168,7 @@
 <p><font size="6px"></p>
 
 <ul>
-  <li> Web Scrapping</li>
+  <li> Web Scraping</li>
   <li> Reporting Services</li>
   <li> Interactive Visualizations</li>
   <li> Data Journalism</li>
