--- a/presentation/index.html
+++ b/presentation/index.html
@@ -125,7 +125,7 @@
 
 <ul class="aligntd">
   <li> Financial Business Partnering</li>
-  <li> Business Financial Controling</li>
+  <li> Business Financial Controlling</li>
   <li> FP&A</li>
   <li> Financial Modeling</li>
 </ul>
