slide size increase

--- a/zevioo/index.html
+++ b/zevioo/index.html
@@ -102,7 +102,7 @@
 
 <body style="opacity: 0">
 
-<slides>
+<slides class="layout-widescreen">
 
   <slide class="title-slide segue nobackground">
         <aside class="gdbar"><img src="index_files/logo.png"></aside>
