--- a/presentation/index.html
+++ b/presentation/index.html
@@ -45,7 +45,7 @@
 
 <p><br><br></p>
 
-<p>Dimitris Nikoglou - Dimitris Psaradellis</p>
+<p>Dimitris N</p>
 
 <p><a href="mailto:dimitrisnk@infilab.io">Contact Me</a> <font size="6px"> or </font> <a href="mailto:dimitrisnps@infilab.io">Contact Me</a></p>
 
@@ -78,7 +78,7 @@
 </section>
 <section class='' data-state='' id='slide-4'>
   <h2>About Me</h2>
-  <p><a target="_blank" href="https://www.linkedin.com/in/dimitris-nikoglou-80629436"><img src="https://i.imgsafe.org/55826103ab.jpg" alt="dimitrisn" align="left"></a> <font size="6px">Hi, I am Dimitris and I am one of the two Co-founders of Infilab, a Zurich based Start-up. I have more than 9 years of experience in various positions in Business Finance having worked at global leaders in FMCG, Retail & Fashion and Healthcare.</font></p>
+  <p><a target="_blank" href=""><img src="https://i.imgsafe.org/55826103ab.jpg" alt="dimitrisn" align="left"></a> <font size="6px">Hi, I am Dimitris and I am one of the two Co-founders of Infilab, a Zurich based Start-up. I have more than 9 years of experience in various positions in Business Finance having worked at global leaders in FMCG, Retail & Fashion and Healthcare.</font></p>
 
 <p><br>
 <br></p>
@@ -90,7 +90,7 @@
 </section>
 <section class='' data-state='' id='slide-5'>
   <h2>and Me</h2>
-  <p><a target="_blank" href="https://www.linkedin.com/in/dpsaradellis"><img src="https://i.imgsafe.org/5581b18307.jpg" alt="dimitrisn" align="left"></a> <font size="6px">Hi, I am also named Dimitris and the other Co-founder of Infilab. I have worked in various multinational companies in Consulting, Internet, Pharmaceutical, Banking sectors. My passion is Big Data Analytics and the recognition of patterns in the data.</font></p>
+  <p><a target="_blank" href=""><img src="https://i.imgsafe.org/5581b18307.jpg" alt="dimitrisn" align="left"></a> <font size="6px">Hi, I am also named Dimitris and the other Co-founder of Infilab. I have worked in various multinational companies in Consulting, Internet, Pharmaceutical, Banking sectors. My passion is Big Data Analytics and the recognition of patterns in the data.</font></p>
 
 <p><br>
 <br></p>
