change background picture

--- a/journalismDeck/index.html
+++ b/journalismDeck/index.html
@@ -47,7 +47,7 @@
 <style type="text/css">
 
       body {
-          background-image: url("http://i.imgsafe.org/c4f2c97f4f.jpg");
+          background-image: url("https://previews.123rf.com/images/dutourdumonde/dutourdumonde1405/dutourdumonde140500029/28649722-White-brick-wall-texture-or-background-Stock-Photo.jpg");
           background-size: 100%;
       }
       
