--- a/journalismDeck/index.html
+++ b/journalismDeck/index.html
@@ -5,7 +5,7 @@
    <meta name="viewport" content="width=1024" />
    <meta name="apple-mobile-web-app-capable" content="yes" />
    <title>on Data Journalism</title>
-   <meta name="description" content="impress.js is a presentation tool based on the power of CSS3 transforms and transitions in modern browsers and inspired by the idea behind prezi.com." />
+   <meta name="description" content="Created with R" />
    <meta name="author" content="infiLab.io" />
    <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic" rel="stylesheet" />
    <link href="libraries/frameworks/impressjs/css/impress-demo.css" rel="stylesheet" />
