--- a/jbar/index.html
+++ b/jbar/index.html
@@ -133,7 +133,7 @@
       <br><br>
 
       <font color='#56595b'>
-      <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">Which personel are bringing in the biggest orders consistently
+      <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">Which personnel are bringing in the biggest orders consistently
       <br>
       <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">Which of your campaigns are creating incremental value
       <br>
@@ -148,7 +148,7 @@
       <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">Which drinks should waiters recommend
       <br>
 
-      <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">Whats your busiest days / hours of days
+      <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">Whats your bussiest days / hours of days
       <br>
       <img src="https://image.ibb.co/gUDyKo/arrow.jpg" height="2%" width="2%">What will your demand be in the next days
       <br>
