--- a/jbar/index.html
+++ b/jbar/index.html
@@ -171,7 +171,7 @@
     <font size='6px' colour='#56595b'>J Cocktail Bar POC </font><br>
       <hr style="border-top: 2px solid #841205;">
       <p>
-        <font size='5px' colour='#56595b'>What we want to achieve: A solution that will help you optimize your restaurant</font><font size='5px' colour='red'>*</font>
+        <font size='5px' colour='#56595b'>What we want to achieve: A solution that will help you optimize your restaurant</font>
         <br><br>
 
         <font color='#56595b'>
