--- a/jbar/index.html
+++ b/jbar/index.html
@@ -248,7 +248,7 @@
   <!-- slide 08 -->
   <div id="thanks" class="step" data-x="-1250" data-y="5000">
     <p style="background-color:#d8d5d0;padding: 0.5em 0.2em 1em 1em">
-    	<font color='#84090f' size='10px'><b>Thank you, </b></font></p>
+    	<font color='#84090f' size='10px'><b>Thank you </b></font></p>
   </div>
 
 
